--- a/configure/config.yaml
+++ b/configure/config.yaml
@@ -6,7 +6,7 @@ app:
   name: "Text Morph"
   version: "1.0.0"
   description: "AI-Powered Text Summarization & Paraphrasing Platform"
-  author: "Jeev"
+  author: "Lavanya"
   page_title: "Text Morph - AI Text Processing"
   page_icon: "🔮"
   layout: "wide"
